Address update and some grammar corrections

--- a/CGCVE.tex
+++ b/CGCVE.tex
@@ -27,15 +27,13 @@
 \firstname{Camilo}
 \familyname{Garc\'ia Tenorio.}
 %\title{}               % optional, remove the line if not wanted
-\address{Chemin du Versant 6}{7000 Mons}   % optional, remove the line if not wanted
+\address{Rue du Gouvernement 41b}{7000 Mons}   % optional, remove the line if not wanted
 \mobile{+32 495 87 82 58}                    % optional, remove the line if not wanted
 %\phone{8616286}                      % optional, remove the line if not wanted
 %\fax{fax (optional)}                          % optional, remove the line if not wanted
 \email{camilo\_7@msn.com}% optional, remove the line if not wanted
 \extrainfo{Professional Card CN206-69339} % optional, remove the line if not wanted
 
-%\photo[64pt]{hojadevida2}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
-%\quote{mi vida hermosa}                 % optional, remove the line if not wanted
 
 %\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
 
@@ -48,7 +46,7 @@
 \maketitle
 
 \section{Professional Profile}
-\cvline{}{Ph. D.  Mechanical and Electromechanical engineerings. With an emphasis on the analysis of control systems based on data-driven algorithms and operator theory. Experienced MATLAB programmer in the field of dynamical systems analysis and control.}  
+\cvline{}{Ph. D., in  Mechanical and Electromechanical engineerings. With an emphasis on the analysis of control systems based on data-driven algorithms and operator theory. Experienced MATLAB programmer in the field of dynamical systems analysis and control.}  
 \section{Publications}
 \cventry{2021}{Analysis of the ROA of an anaerobic digestion process via data-driven Koopman operator}{Camilo Garcia-Tenorio, Eduardo Mojica-Nava, Mihaela Sbarciog and Alain Vande Wouwer}{Nonlinear Engineering}{10 p. 109--131}{}
 \cventry{2021}{Trigonometric Embeddings in Polynomial Extended Mode Decomposition—Experimental Application to an Inverted Pendulum}{Camilo Garcia-Tenorio, Eduardo Mojica-Nava, Gilles Delansnay and Alain Vande Wouwer}{Mathematics}{10, 1119}{}
