Uodate with the PhD

--- a/CGCVE.tex
+++ b/CGCVE.tex
@@ -9,7 +9,7 @@
 \documentclass[11pt,a4paper]{moderncv}
 
 % moderncv themes
-\moderncvtheme[grey]{classic}                 % optional argument are 'blue' (default), 'orange', 'red', 'green', 'grey' and 'roman' (for roman fonts, instead of sans serif fonts)
+\moderncvtheme[blue]{classic}                 % optional argument are 'blue' (default), 'orange', 'red', 'green', 'grey' and 'roman' (for roman fonts, instead of sans serif fonts)
 %\moderncvtheme[green]{classic}                % idem
 
 % character encoding
@@ -68,16 +68,17 @@
 \cvlistitem{Digital Electronics}
 
 \section{Formal Education}
-\cventry{2014(E)}{Master of Science in electronics engineerings}{los Andes University}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
+\cventry{2021}{Ph. D., in mechanical and electromecanical engineering}{Unviersidad Nacional de Colombia}{Bogot\'a Colombia}{In cotutelle with Universit\'e de Mons}{Thesis on data-driven analysis and control of dynamical systems. Focus on the analysis of the multi stability phenomenon via the Koopman operator.}
+\cventry{2021}{Ph. D., in engineering sciences}{Universit\'e de Mons}{Mons Belgique}{In cotutelle with Universidad Nacional de Colombia}{}
+\cventry{2014}{Master of Science in electronics engineerings}{los Andes University}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
 \cventry{2010}{Electronic Engineer}{los Andes University}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
 \cventry{2005}{High School Degree}{Abraham Lincoln School}{Bogot\'a Colombia}{}{}  % arguments 3 to 6 are optional
 \section{Languages}
 %\cvlanguage{Español}{Lengua Materna}{}
 \cvlanguage{English}{100\%}{TOEFL(IBT) Score: 105/120}
 \section{Computer Skills}
-\cvcomputer{Software}{Microsoft Office, MATLAB,}{}{}
+\cvcomputer{Software}{MATLAB, \LaTeX, Python}{}{}
 \cvcomputer{}{LabVIEW, Spice}{}{}
-\cvcomputer{Programming languages}{MATLAB, Python, Ladder}{}{}
 %\nocite{*}
 %\bibliographystyle{plain}
 %\bibliography{publications}       % 'publications' is the name of a BibTeX file
