--- a/Academia/CGCVE.tex
+++ b/Academia/CGCVE.tex
@@ -16,16 +16,11 @@
 % personal data
 \firstname{Camilo}
 \familyname{Garcia Tenorio.}
-%\title{}               % optional, remove the line if not wanted
+\title{Ph.D.}               % optional, remove the line if not wanted
 \address{Rue du Gouvernement 41b}{7000 Mons, Belgique}   % optional, remove the line if not wanted
 \mobile{+32 495 87 82 58}                    % optional, remove the line if not wanted
 \email{camilo\_7@msn.com}% optional, remove the line if not wanted
 %\extrainfo{Professional Card CN206-69339} % optional, remove the line if not wanted
-
-
-%\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
-
-
 %----------------------------------------------------------------------------------
 %            content
 %----------------------------------------------------------------------------------
@@ -35,8 +30,9 @@
 
 \section{Professional Profile}
 \cvline{}{Ph.D.\ in  Mechanical and Electromechanical Engineering, with an emphasis on the analysis of control systems based on data-driven algorithms and the Koopman operator. Research focus on general control theory for non-linear systems. Currently working in Industry 4.0 solutions in a collaborative project between academy and industry. Interest in data-driven models from sensor data to produce solutions in a cloud server to subsequently design feedback loop controllers, optimization algorithms and anomaly detection methods to be deployed in edge computers. Experienced MATLAB programmer in the field of dynamical systems analysis and control.}  
+
 \section{Work Experience}
-\cventry{2020--2023}{Researcher}{Universit\'e de Mons/TECforLime}{Mons/Louvain-La-Neuve}{Belgium}{Researcher in data-driven methods for Industry 4.0 deployment solutions for lime production as part of the BeWaRe fellowship of the Walloon region in Belgium.}
+\cventry{2020--2023}{Researcher}{Universit\'e de Mons/TECforLime}{Mons/Louvain-La-Neuve}{Belgium}{Researcher in data-driven methods for Industry 4.0 deployment solutions for lime production as part of the BeWaRe fellowship of the Walloon Region in Belgium.}
 \cvlistitem{Data-driven modeling of the industrial process via the pqEDMD algorithm.}
 \cvlistitem{Research and development of data-driven modeling tools to capture the dynamics of the process. Specifically, improving the pqEDMD algorithm by adding optimization schemas that can deal with the uncertainty in the measurements and the numerical stability of the solution.}
 \cventry{2015--2021}{Ph.D. Candidate}{Universidad Nacional/Universit\'e de Mons}{Bogot\'a/Mons}{Colombia/Belgique}{Ph.D. In Mechanical and Electromechanical Engineering in a cotutelle agreement with University of Mons.}
@@ -44,21 +40,47 @@
 \cvlistitem{Characterization of attraction regions of asymptotically stable equilibrium points. Research and development based on the spectral decomposition of the Koopman operator. }
 \cvlistitem{Development of numeric algorithms to obtain the Koopman operator of dynamical systems. Research on the use of the trajectories or sample data of the dynamical system to approximate the operator representation.}
 \cvlistitem{Development of the pqEDMD algorithm for system analysis and control.}
+
 \cventry{2015--2015}{Lecturer}{Universidad Distrital}{Bogot\'a}{Colombia}{Professor of the Control systems course of the electronics engineer program. Course in linear system analysis, transfer functions and Laplace transforms. Covering stability analysis, feedback controller design and frequency analysis. The functions of the position are:}
 \cvlistitem{Prepare classes and laboratories}
 \cvlistitem{Prepare and grade partial exams}
 \cvlistitem{Ensure that the student group get prepared in the aspects of classical control theory}
-\cventry{2013--2014}{Graduate Teaching Assistant}{Los Andes University}{Bogot\'a}{Colombia}{Work as an assistant in different subjects from the undergraduate program designing laboratory assignments, designing and evaluating class workshops and different tutorials in subjects such as:}
+
+\cventry{2013--2014}{Graduate Teaching Assistant}{Los Andes University}{Bogot\'a}{Colombia}{Work as an assistant in different courses from the undergraduate program. the main tasks as an assistant are designing laboratory assignments, designing and evaluating class workshops and lecture different tutorials in subjects such as:}
 \cvlistitem{Control Systems Analysis}
 \cvlistitem{Dynamic Systems}
 \cvlistitem{Electronic Instrumentation}
 \cvlistitem{Digital Electronics}
 
+\cventry{2014--2015}{External Commercial Advisor}{Soluciones Autom\'aticas}{Bogot\'a}{Colombia}{Work as an advisor commercializing equipment and software for automation from Mitsubishi Electric Automation. Performing tasks such as:}
+\cvlistitem{Procurement of visits to maintain and expand the client base}
+\cvlistitem{Make quotes}
+\cvlistitem{Keep myself updated with the state of the art in automation technology}
+\cventry{2011--2013}{Staff}{Ernst \& Young}{Bogot\'a}{Colombia}{Work in the IT Risk and Assessment ITRA department of the company performing tasks such as:}
+\cvlistitem{IT audit checking compliance with access and change management}
+\cvlistitem{IT audit checking compliance with SOX controls}
+
+\cventry{2010--2011}{Universitary Professional}{Banco Agrario de Colombia}{Bogot\'a}{Colombia}{Work as an assistant to the presidency of the Bank, performing tasks such as:}
+\cvlistitem{Assistant to the credit Vice Presidency in the MARC project. The objective was to upgrade technologically the banking book recovery.}
+\cvlistitem{Participant of the credit factory project, this project main purpose is to reduce the time of approval of the different credit lines.}
+\cvlistitem{Assistant to the credit Vice Presidency, verifying the viability of the improvement proposals in the operative model of the Vice Presidency.}
+
+\cventry{2010--2010}{Project Manager}{Soluciones - Tecnolog\'a y Servicios}{Bogot\'a}{Colombia}{Plan and follow the different post sale tasks in the company, performing activities such as:}
+\cvlistitem{Active communication with the customer, account managers and service engineers in order to produce the documentation of the solution requirements.}
+\cvlistitem{Build schedules of the implementation of the solution, from the physical installation to the logical configuration of the switches, storage solutions and servers.}
+\cvlistitem{Monitoring the implementation tasks in order to ensure on time and on budget completion.}
+
 \section{Formal Education}
 \cventry{2021}{Ph.D., in Mechanical and Electromechanical Engineering}{Unviersidad Nacional de Colombia}{Bogot\'a Colombia}{In cotutelle with Universit\'e de Mons}{Thesis on data-driven analysis and control of dynamical systems. Focus on the analysis of the multi stability phenomenon via the Koopman operator.}
+
 \cventry{2021}{Ph.D., in Engineering Sciences}{Universit\'e de Mons}{Mons Belgique}{In cotutelle with Universidad Nacional de Colombia}{}
-\cventry{2014}{M.Sc.\ in Electronics engineering}{Universidad de Los Andes}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
+
+\cventry{2014}{M.Sc.\ in Electronics engineering}{Universidad de Los Andes}{Bogot\'a}{Colombia}{}     % arguments 3 to 6 are optional
+
 \cventry{2010}{Electronic Engineer}{Universidad de Los Andes}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
+\section{Complementary Studies}
+\cventry{2021}{University Certificate in Artificial Intelligence (Hands on AI)}{Universit\'e de Mons}{Mons}{Belguique}{}
+\cventry{2010}{Diplomat in Project Management}{"Escuela Colombiana de Ingenieria Julio G."}{Bogot\'a}{}{}
 \section{Publications}
 \cventry{2023}{Evaluation of the Regions of Attraction of Higher-Dimensional Hyperbolic Systems Using Extended Dynamic Mode Decomposition}{Camilo Garcia-Tenorio, Duvan Tellez-Castro, Eduardo Mojica-Nava and Alain Vande Wouwer}{Automation}{4 (1) p. 57--77}{}
 \cventry{2022}{Maximum Likelihood pqEDMD Identification}{Camilo Garcia-Tenorio and Alain Vande  Wouwer}{International Conference on System Theory, Control and Computing, Sinaia, Romania}{p. 540--545}{}
