--- a/Industry/CGCVE.tex
+++ b/Industry/CGCVE.tex
@@ -31,11 +31,11 @@
 \maketitle
 
 \section{Professional Profile}
-\cvline{}{Ph.D.\ in  Mechanical and Electromechanical Engineering, with an emphasis on data-driven (Time-series) analysis and control of systems. Research focus on general control theory for non-linear systems. Currently working in Industry 4.0 solutions in a collaborative project between academy and industry. Interest in data-driven models from sensor data to produce solutions in a cloud server to subsequently design feedback loop controllers, optimization algorithms and anomaly detection methods to be deployed in edge computers. Experienced MATLAB programmer in the field of dynamical systems analysis and control.}  
+\cvline{}{Ph.D.\ in  Mechanical and Electromechanical Engineering, with an emphasis on data-driven (Time-series) analysis and control of systems. Implementations focus on general control and analysis of complex processes. Currently working in Industry 4.0 solutions in a collaborative project between academy and industry. The project and experience is the production of data-driven models from sensor data to produce digital twins in a cloud server to subsequently design feedback loop controllers, optimization algorithms and anomaly detection methods to be deployed in edge computers. Experienced MATLAB developer in the field of dynamical systems analysis and control.}  
 
 \section{Work Experience}
 \cventry{2020--2023}{Researcher}{Universit\'e de Mons/TECforLime}{Mons/Louvain-La-Neuve}{Belgium}{Researcher in data-driven methods for Industry 4.0 deployment. Design and deploy solutions for industrial lime production in kilns. Research funded by the BeWaRe fellowship program of the Walloon Region in Belgium.}
-\cvlistitem{Prepare and redact the project proposal that led to acquiring the Marie Curie grant.}
+\cvlistitem{Prepare and redact the project proposal that led to acquiring the BeWaRe Marie Curie grant.}
 \cvlistitem{Modeling of key variables (Temperatures, pressures, quality) based on the time-series data of the kilns. The models provide an approximation of the behavior of the process, an input useful for analysis of the system, control, and anomaly detection.}
 \cvlistitem{Research and development of data-driven modeling tools to capture the dynamics of the process. Specifically, improving the pqEDMD algorithm by adding optimization schemas that can deal with the uncertainty in the measurements and the numerical stability of the solution.}
 \cvlistitem{Development of the algorithm in Matlab and Python for the subsequent integration in cloud-based platforms, specifically, Microsoft Azure.}
