mistake in areas of expertise and fix cross

--- a/AcademiaHipster/CGCVE.tex
+++ b/AcademiaHipster/CGCVE.tex
@@ -56,7 +56,7 @@
 
 Control Systems $\bullet$ Data-Driven Control\\ 
 Machine-Learning Identification\\
-Subsystem Methods $\bullet$ Digital-Twins\\
+Subspace Methods $\bullet$ Digital-Twins\\
 Industry 4.0 $\bullet$ Matlab
 
 \bigskip
@@ -104,10 +104,15 @@ Industry 4.0 $\bullet$ Matlab
 
 \bigskip
 
-% \scalebox{0.8}{
-%   \centering
-% \iconcross{\Huge}{white}{cvred}{\color{black!30}\faBook}{\href{mailto:the.latex.ninja@gmail.com}{\faEnvelopeO}}{\faPhone}{\faCode}
-% }
+\centering
+\scalebox{0.7}{
+  \centering
+\iconcross{\Huge}{white}{cvred}%
+{\faPhone}%
+{\href{mailto:camilo_7@msn.com}{\faEnvelope}}%
+{\href{https://www.linkedin.com/in/camilo-garcia-tenorio-08813740/}{\faLinkedin}}%
+{\href{https://github.com/garten-cam}{\faGithub}}%
+}
 \phantom{turn the page}
 
 
@@ -121,12 +126,12 @@ Industry 4.0 $\bullet$ Matlab
 
 \begin{tabular}{r| p{0.5\textwidth}}
     \cvevent{2020--2023}{Post-Doctoral Researcher}{Researcher}{Universit\'e de Mons}{Data-driven (Machine Learning) model and control of Industrial lime production. Python and Matlab algorithm based on EDMD.}\\
-    \cvevent{2015--2021}{Ph.D. Candidate}{Researcher}{Cotutelle - Umons-Belgium/Unal-Colombia}{Extended dynamic mode decomposition $\bullet$ Koopman operator $\bullet$ Regions of attraction $\bullet$ Nonlinear models $\bullet$ Model predictive control.}\\
-    % \cvevent{2010--2015}{Lecturer, Automation Salesman, Teaching Assistant, Project Manager}{Various Positions}{Colombia}{Control systems lectures $\bullet$ Quote and sell automation solutions $\bullet$ Laboratory and complimentary lectures $\bullet$ Automate banking solutions $\bullet$ Manage post-sales activities.}
+    \cvevent{2015--2021}{Ph.D. Candidate}{Researcher}{Cotutelle - Umons-Belgium/Unal-Colombia}{Extended dynamic mode decomposition $\bullet$ Koopman operator $\bullet$ Regions of attraction $\bullet$ Nonlinear models $\bullet$ Model predictive control $\bullet$.}\\
+    \cvevent{2010--2015}{Lecturer, Automation Salesman, Teaching Assistant, Project Manager}{Various Positions}{Colombia}{Control systems lectures $\bullet$ Quote and sell automation solutions $\bullet$ Laboratory and complimentary lectures $\bullet$ Automate banking solutions $\bullet$ Manage post-sales activities.}
 \end{tabular}
-\begin{center}
-  \smartdiagram
-\end{center}
+% \begin{center}
+%   \smartdiagram
+% \end{center}
 
 \vspace{2em}
 
@@ -196,8 +201,7 @@ Industry 4.0 $\bullet$ Matlab
 \setlength{\parindent}{0pt}
 \begin{minipage}[t]{\rightcolwidth}
 \begin{center}\fontfamily{\sfdefault}\selectfont \color{black!70}
-  {\small Camilo Garcia Tenorio\href{mailto:camilo_7@msn.com}{\icon{\faEnvelope}{cvpurple}{}} \href{https://www.linkedin.com/in/camilo-garcia-tenorio-08813740/}{\icon{\faLinkedin}{}{}} \href{https://github.com/garten-cam}{\icon{\faGithub}}\icon{\faPhone}{cvpurple}{} +32/0495 878258
-}
+	{\small Camilo Garcia Tenorio\href{mailto:camilo_7@msn.com}{\icon{\faEnvelope}{cvpurple}{}} \href{https://www.linkedin.com/in/camilo-garcia-tenorio-08813740/}{\icon{\faLinkedin}{cvpurple}{}} \href{https://github.com/garten-cam}{\icon{\faGithub}{cvpurple}{}}\icon{\faPhone}{cvpurple}{} +32/0495 878258}
 \end{center}
 \end{minipage}
 
@@ -205,93 +209,3 @@ Industry 4.0 $\bullet$ Matlab
 \end{paracol}
 
 \end{document}
-%----------------------------------------------------------------------------------
-%            content
-%----------------------------------------------------------------------------------
-% \begin{document}
-%
-% \maketitle
-%
-% \section{Professional Profile}
-% \cvline{}{Ph.D.\ in  Mechanical and Electromechanical Engineering, with an emphasis on the analysis of control systems based on data-driven algorithms and the Koopman operator. Research focus on general control theory for non-linear systems based on decomposition methods that give linear approximations in a space of functions rather than the state space. Currently working in Industry 4.0 solutions in a collaborative project between academy and industry. Interest in data-driven models from sensor data to produce accurate approximations that subsequently, are the main input for the design of feedback loop controllers, optimization algorithms and anomaly detection methods. Experienced MATLAB programmer in the field of dynamical systems analysis and control.}  
-%
-% \section{Work Experience}
-% \cventry{2020--2023}{Researcher}{Universit\'e de Mons/TECforLime}{Mons/Louvain-La-Neuve}{Belgium}{Researcher in data-driven methods for modeling and control of complex systems. In the scope of the project, the target system is the lime production in kiln furnaces. Project funded by the BeWaRe fellowship of the Walloon Region in Belgium.}
-% \cvlistitem{Prepare and redact the project proposal that led to acquiring the BeWaRe Marie Curie grant.}
-% \cvlistitem{Modeling of key variables (Temperatures, pressures, quality) based on the time-series data of the kilns. The models provide an approximation of the behavior of the process, an input useful for analysis of the system, control, and anomaly detection.}
-% \cvlistitem{Research and development of data-driven modeling tools to capture the dynamics of the system. Specifically, improving the pqEDMD algorithm by adding optimization schemas that can deal with the uncertainty in the measurements and the numerical stability of the solution.}
-% \cvlistitem{Development of the algorithm in Matlab and Python for the subsequent integration in cloud-based platforms, specifically, Microsoft Azure.}
-% \cventry{2015--2021}{Ph.D. Candidate}{Universidad Nacional/Universit\'e de Mons}{Bogot\'a/Mons}{Colombia/Belgique}{Ph.D. In Mechanical and Electromechanical Engineering in a cotutelle agreement with University of Mons.}
-% \cvlistitem{Analysis and control of nonlinear dynamical systems.}
-% \cvlistitem{Development of modeling techniques based on time-series data of an arbitrary dynamical system. The main achievement of the development is the ability to capture complex nonlinear dynamics in a mathematical structure that is suitable for analysis and control.}
-% \cvlistitem{Analysis of complex nonlinear systems using the data-driven models. Specifically, some systems have multiple equilibrium/fixed points, normally, it is desired to keep the system at one of these points, where the behavior is optimal. Therefore, the analysis tool is able to identify the fixed points and determine the region of attraction that guarantees that the system will converge to the desired behavior.}
-% \cvlistitem{Data-Driven control of complex systems. The models that come from the time-series data of an actual system, or the integration of a differential equation using my development are suitable to use as the basis for model predictive control (MPC) algorithms. Therefore, I also developed a variant of MPC that takes the structure of my data-driven approximations to make decision for driving the system to a desired fixed point.}
-% \cvlistitem{All the aforementioned achievements depend on the effective approximation of the behavior of a process using the time-series data. These approximations come from black-box models that rely on the selection of appropriate global approximation functions. The contribution of my thesis to this type of models is the systematic an effective selection of functions for the global approximation. As a consequence, my approach increases the numerical stability, and reduces the computational effort of the algorithm.}
-% \cvlistitem{Improvement of the extended dynamic mode decomposition (EDMD) algorithm by the systematic selection of black-box approximation functions. My development, called the pqEDMD is available on-line in my GitHub repository.}
-% \cvlistitem{Development of process analysis techniques based on the approximations. }
-%
-% \cventry{2015--2015}{Lecturer}{Universidad Distrital}{Bogot\'a}{Colombia}{Professor of the Control systems course of the electronics engineer program. Course in linear system analysis, transfer functions and Laplace transforms. Covering stability analysis, feedback controller design and frequency analysis. The functions of the position are:}
-% \cvlistitem{Prepare classes and laboratories}
-% \cvlistitem{Prepare and grade partial exams}
-% \cvlistitem{Ensure that the student group get prepared in the aspects of classical control theory}
-%
-% \cventry{2013--2014}{Graduate Teaching Assistant}{Los Andes University}{Bogot\'a}{Colombia}{Work as an assistant in different courses from the undergraduate program. the main tasks as an assistant are designing laboratory assignments, designing and evaluating class workshops and lecture different tutorials in subjects such as:}
-% \cvlistitem{Control Systems Analysis}
-% \cvlistitem{Dynamic Systems}
-% \cvlistitem{Electronic Instrumentation}
-% \cvlistitem{Digital Electronics}
-%
-% \cventry{2014--2015}{External Commercial Advisor}{Soluciones Autom\'aticas}{Bogot\'a}{Colombia}{Work as an advisor commercializing equipment and software for automation from Mitsubishi Electric Automation. Performing tasks such as:}
-% \cvlistitem{Procurement of visits to maintain and expand the client base}
-% \cvlistitem{Make quotes}
-% \cvlistitem{Keep myself updated with the state of the art in automation technology}
-% \cventry{2011--2013}{Staff}{Ernst \& Young}{Bogot\'a}{Colombia}{Work in the IT Risk and Assessment ITRA department of the company performing tasks such as:}
-% \cvlistitem{IT audit checking compliance with access and change management}
-% \cvlistitem{IT audit checking compliance with SOX controls}
-%
-% \cventry{2010--2011}{Universitary Professional}{Banco Agrario de Colombia}{Bogot\'a}{Colombia}{Work as an assistant to the presidency of the Bank, performing tasks such as:}
-% \cvlistitem{Assistant to the credit Vice Presidency in the MARC project. The objective was to upgrade technologically the banking book recovery.}
-% \cvlistitem{Participant of the credit factory project, this project main purpose is to reduce the time of approval of the different credit lines.}
-% \cvlistitem{Assistant to the credit Vice Presidency, verifying the viability of the improvement proposals in the operative model of the Vice Presidency.}
-%
-% \cventry{2010--2010}{Project Manager}{Soluciones - Tecnolog\'a y Servicios}{Bogot\'a}{Colombia}{Plan and follow the different post sale tasks in the company, performing activities such as:}
-% \cvlistitem{Active communication with the customer, account managers and service engineers in order to produce the documentation of the solution requirements.}
-% \cvlistitem{Build schedules of the implementation of the solution, from the physical installation to the logical configuration of the switches, storage solutions and servers.}
-% \cvlistitem{Monitoring the implementation tasks in order to ensure on time and on budget completion.}
-%
-% \section{Formal Education}
-% \cventry{2021}{Ph.D., in Mechanical and Electromechanical Engineering}{Unviersidad Nacional de Colombia}{Bogot\'a Colombia}{In cotutelle with Universit\'e de Mons}{Thesis on data-driven analysis and control of dynamical systems. Focus on the analysis of the multi stability phenomenon via the Koopman operator.}
-%
-% \cventry{2021}{Ph.D., in Engineering Sciences}{Universit\'e de Mons}{Mons Belgique}{In cotutelle with Universidad Nacional de Colombia}{}
-%
-% \cventry{2014}{M.Sc.\ in Electronics engineering}{Universidad de Los Andes}{Bogot\'a}{Colombia}{}     % arguments 3 to 6 are optional
-%
-% \cventry{2010}{Electronic Engineer}{Universidad de Los Andes}{Bogot\'a Colombia}{}{}     % arguments 3 to 6 are optional
-% \section{Complementary Studies}
-% \cventry{2021}{University Certificate in Artificial Intelligence (Hands on AI)}{Universit\'e de Mons}{Mons}{Belguique}{}
-% \cventry{2010}{Diplomat in Project Management}{"Escuela Colombiana de Ingenieria Julio G."}{Bogot\'a}{}{}
-% \section{Publications}
-% \cventry{2023}{Evaluation of the Regions of Attraction of Higher-Dimensional Hyperbolic Systems Using Extended Dynamic Mode Decomposition}{Camilo Garcia-Tenorio, Duvan Tellez-Castro, Eduardo Mojica-Nava and Alain Vande Wouwer}{Automation}{4 (1) p. 57--77}{}
-% \cventry{2022}{Maximum Likelihood pqEDMD Identification}{Camilo Garcia-Tenorio and Alain Vande  Wouwer}{International Conference on System Theory, Control and Computing, Sinaia, Romania}{p. 540--545}{}
-% \cventry{2022}{A Matlab Toolbox for Extended Dynamic Mode Decomposition Based on Orthogonal Polynomials and pq Quasi-Norm Order Reduction}{Camilo Garcia-Tenorio and Alain Vande Wouwer}{Mathematics}{10 (20) p. 3859}{}
-% \cventry{2022}{Data-Driven Predictive Control of Interconnected Systems Using the Koopman Operator}{Duvan Tellez-Castro, Camilo Garcia-Tenorio, Eduardo Mojica-Nava, Jorge Sofrony and Alain Vande Wouwer}{Actuators}{11 (6) p. 151}{}
-% \cventry{2022}{Extended Predictive Control of Interconnected Oscillators}{Camilo Garcia-Tenorio and Alain Vande Wouwer}{International Conference on Control, Decision and Information Technologies}{1 p. 15--20}{}
-% \cventry{2022}{PFR Kiln Feature Selection for Modelling and Control}{Camilo Garcia-Tenorio, Alain Vande Wouwer, Thomas Abbate, Laurent Rijmenans}{International Conference on System Theory, Control and Computing}{p. 588--593}{}
-% \cventry{2021}{Analysis of the ROA of an anaerobic digestion process via data-driven Koopman operator}{Camilo Garcia-Tenorio, Eduardo Mojica-Nava, Mihaela Sbarciog and Alain Vande Wouwer}{Nonlinear Engineering}{10 p. 109--131}{}
-% \cventry{2021}{Trigonometric Embeddings in Polynomial Extended Mode Decomposition—Experimental Application to an Inverted Pendulum}{Camilo Garcia-Tenorio, Eduardo Mojica-Nava, Gilles Delansnay and Alain Vande Wouwer}{Mathematics}{10, 1119}{}
-% \cventry{2020}{Linearization in the Large of the Anaerobic Digestion Process Using a Reduced-Order Koopman Operator}{Camilo Garcia-Tenorio, Mihaela Sbarciog, Eduardo Mojica-Nava, Alain Vande Wouwer}{IFAC-PapersOnLine}{53 (2) p. 16840--16845}{}
-% \cventry{2019}{Analysis of a class of hyperbolic systems via data-driven koopman operator}{Camilo Garcia-Tenorio, Duvan Tellez-Castro, Eduardo Mojica-Nava, A Vande Wouwer}{International Conference on System Theory, Control and Computing}{p. 566--571}{}
-% \cventry{2016}{Bond graph model-based for IDA-PBC}{C Garcia-Tenorio, N Quijano, E Mojica-Nava, J Sofrony}{IEEE Conference on Control Applications}{p. 1098--1103}{}
-% \section{Languages}
-% \cvlanguage{Spanish}{Mother Language}{}
-% \cvlanguage{English}{100\%}{TOEFL (IBT) Score: 105/120}
-% \section{Computer Skills}
-% \cvcomputer{Software}{MATLAB, \LaTeX, Python, Spice}{}{}
-% %\nocite{*}
-% %\bibliographystyle{plain}
-% %\bibliography{publications}       % 'publications' is the name of a BibTeX file
-%
-% \end{document}
-%
-%
-% %% end of file `template_en.tex'.
